--- a/columbusLogistics-registration-react/package.json
+++ b/columbusLogistics-registration-react/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.0",
     "@react-shanties/core": "^0.0.12",
     "@reduxjs/toolkit": "^2.8.2",
     "@vitejs/plugin-react-swc": "^3.11.0",
