--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "swiper": "^11.2.10",
