--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^17.2.1",
     "dotenv-flow": "^4.1.0",
     "lodash": "^4.17.21",
+    "pdfmake": "^0.2.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@react-ddd/eslint-config": "^0.4.0",
     "@types/lodash": "^4.17.20",
+    "@types/pdfmake": "^0.2.11",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "globals": "^16.3.0",
